# GammatekTest

./: CMakeLists.txt  README.md  client.cpp  device_info.proto  main.cpp
